# rusty_repo_wise

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci-rust.yml
crates/repowise-adr/: Cargo.toml
crates/repowise-adr/src/: adr_files.rs  changelog.rs  code_comments.rs  commits.rs  inline_markers.rs  lib.rs  linking.rs  pull_requests.rs
crates/repowise-adr/tests/: mine.rs
crates/repowise-cli/: Cargo.toml
crates/repowise-cli/src/: indexing.rs  main.rs
crates/repowise-core/: Cargo.toml
crates/repowise-core/src/: lib.rs  walk.rs
crates/repowise-dashboard/: Cargo.toml
crates/repowise-dashboard/src/: lib.rs  render.rs
crates/repowise-dashboard/tests/: generate.rs
crates/repowise-docs/: Cargo.toml
crates/repowise-docs/src/: lib.rs  render.rs
crates/repowise-docs/tests/: generate.rs
crates/repowise-git/: Cargo.toml
crates/repowise-git/src/: blame.rs  change_risk.rs  issue_refs.rs  lib.rs  log.rs
crates/repowise-git/tests/: analytics.rs  change_risk.rs
crates/repowise-graph/: Cargo.toml
crates/repowise-graph/src/: lib.rs  modpath.rs
crates/repowise-graph/tests/: resolution.rs
crates/repowise-health/: Cargo.toml
crates/repowise-health/src/: dead_code.rs  lcom4.rs  lib.rs  near_duplicate.rs
crates/repowise-health/tests/: dead_code.rs  scoring.rs  weights.rs
crates/repowise-llm/: Cargo.toml
crates/repowise-llm/src/: lib.rs
crates/repowise-mcp/: Cargo.toml
crates/repowise-mcp/src/: lib.rs
crates/repowise-parser/: Cargo.toml
crates/repowise-parser/src/: c.rs  cpp.rs  csharp.rs  dart.rs  go.rs  java.rs  javascript.rs  kotlin.rs  lib.rs  metrics.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  shell.rs  swift.rs
crates/repowise-server/: Cargo.toml
crates/repowise-server/src/: lib.rs
crates/repowise-web/: Cargo.toml  Trunk.toml  index.html
crates/repowise-web/src/: main.rs
