[workspace]
resolver = "2"
members = [
    "crates/repowise-core",
    "crates/repowise-parser",
    "crates/repowise-graph",
    "crates/repowise-health",
    "crates/repowise-git",
    "crates/repowise-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/baileyrd/rusty_repo_wise"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
petgraph = "0.6"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
walkdir = "2"
