[workspace]
resolver = "2"
members = [
    "crates/repowise-core",
    "crates/repowise-parser",
    "crates/repowise-graph",
    "crates/repowise-health",
    "crates/repowise-git",
    "crates/repowise-docs",
    "crates/repowise-adr",
    "crates/repowise-mcp",
    "crates/repowise-dashboard",
    "crates/repowise-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/baileyrd/rusty_repo_wise"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
petgraph = "0.6"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-kotlin-ng = "1"
tree-sitter-go = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.21"
tree-sitter-scala = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c = "0.21"
tree-sitter-swift = "0.6"
tree-sitter-php = "0.23"
tree-sitter-dart = "0.2"
tree-sitter-bash = "0.25"
walkdir = "2"
