[package]
name = "repowise-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
repowise-core = { path = "../repowise-core" }
repowise-graph = { path = "../repowise-graph" }
repowise-health = { path = "../repowise-health" }
repowise-git = { path = "../repowise-git" }
repowise-adr = { path = "../repowise-adr" }
anyhow.workspace = true

[dev-dependencies]
repowise-parser = { path = "../repowise-parser" }
tempfile = "3"
