[package]
name = "repowise-docs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
repowise-core = { path = "../repowise-core" }
repowise-graph = { path = "../repowise-graph" }
repowise-health = { path = "../repowise-health" }
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
