[package]
name = "repowise-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
repowise-core = { path = "../repowise-core" }
petgraph.workspace = true
anyhow.workspace = true

[dev-dependencies]
repowise-parser = { path = "../repowise-parser" }
tempfile = "3"
