[package]
name = "repowise-llm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
repowise-core = { path = "../repowise-core" }
repowise-docs = { path = "../repowise-docs" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
