[package]
name = "repowise-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
repowise-core = { path = "../repowise-core" }
repowise-graph = { path = "../repowise-graph" }
repowise-health = { path = "../repowise-health" }
repowise-git = { path = "../repowise-git" }
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
schemars = "1"
rmcp = { version = "2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }

[dev-dependencies]
repowise-parser = { path = "../repowise-parser" }
tempfile = "3"
