[package]
name = "repowise-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
repowise-core = { path = "../repowise-core" }
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-java.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-go.workspace = true
